# wallets-proj

./: .gitignore  README.md  docker-compose.yml  env_template  pgbouncer.ini  pyproject.toml  requirements.txt  userlist.txt
locust/: locustfile.py
project_root/: settings.py  urls.py
reports/: Locust_2025-01-18-18h52_locustfile.py_http___web_8000_failures.csv
wallets/: models.py  serializers.py  urls.py  views.py
wallets/migrations/: 0001_initial.py
wallets/tests/: conftest.py  test_endpoints.py  tests_views.py
